2004-02-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (lockfiles): Reformat a comment for 80 characters.  Fix a
	few minor issues that caused tests to fail in remote mode.  Clean up
	after test.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* lock.c (unlock_proc): Don't expect an int in closure as it is not
	condoned in the C standard.  For now, just assume zero since this
	function is currently only called from one location.
	(remove_locks): Pass NULL for the closure argument to unlock_proc().

2004-02-12  Derek Price  <derek@ximbiot.com>

	* lock.c (unlock_proc): Use closure as true/false free_repository
	free_repository argument to remove_lock_files.  Move to a position
	above remove_locks and delete prototype.
	(remove_locks): Don't free storage, as specified in our header comment,
	in order to avoid a seg fault that could otherwise occur after waiting
	on a lock.
	* sanity.sh (lockfiles): Add tests for all operation (read, read
	promotably, or write) and lock combinations.
	(Original report from Mark <cm_mark@yahoo.com>.)

2004-02-12  Larry Jones  <lawrence.jones@ugsplm.com>

	* modules.c (_do_module): Rename to my_module to avoid reserved name.
	* stack.c (_push, _pop, _unshift, _shift): Rename to do_*.

2004-02-12  Mark D. Baushke  <mdb@cvshome.org>

	* commit.c (find_fileproc): Plug a memory leak.

2004-02-12  Larry Jones  <lawrence.jones@ugsplm.com>

	* lock.c (_lock_simple_remove): Rename to remove_lock_files to avoid
	reserved name.  Fix typo (free => free_repository).
	(lock_simple_remove): Delete; use remove_lock_files directly.
	(lock_simple_remove_and_free): Ditto.
	(_lock_exists): Rename to lock_exists.

2004-02-11  Larry Jones  <lawrence.jones@ugsplm.com>

	* root.c (parse_cvsroot): Set hostname in fork mode for error messages.
	* buffer.c (stdio_buffer_shutdown): Undo previous change.

2004-02-11  Mark D. Baushke  <mdb@cvshome.org>

	* buffer.c (buf_free): Plug a memory leak.
	* commit.c (checkaddfile): Ditto.
