@@ -1,3 +1,7 @@
+2004-02-12  Mark D. Baushke  <mdb@cvshome.org>
+
+	* server.c (do_cvs_command): Plug a memory leak.
+
 2004-02-12  Derek Price  <derek@ximbiot.com>
 
 	* sanity.sh (lockfiles): Reformat a comment for 80 characters.  Fix a
